--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test": "vue-cli-service test:unit",
+    "serve": "npm run lint && vue-cli-service serve",
+    "build": "npm run lint && vue-cli-service build",
+    "test": "npm run lint && vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
